--- a/github-android-core/pom.xml
+++ b/github-android-core/pom.xml
@@ -14,5 +14,18 @@
   <version>1.0-SNAPSHOT</version>
   <name>github-android-core - Core</name>
 
-
+  <dependencies>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.9.5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.easytesting</groupId>
+      <artifactId>fest-assert</artifactId>
+      <version>1.4</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
