--- a/github-android-it/pom.xml
+++ b/github-android-it/pom.xml
@@ -35,6 +35,12 @@
       <version>1.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.jayway.android.robotium</groupId>
+      <artifactId>robotium-solo</artifactId>
+      <version>4.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
