--- a/github-android/AndroidManifest.xml
+++ b/github-android/AndroidManifest.xml
@@ -5,7 +5,7 @@
   package="com.github.frankiesardo.gaagbt">
 
   <uses-sdk
-    android:minSdkVersion="8"
+    android:minSdkVersion="14"
     android:targetSdkVersion="16" />
 
   <application
@@ -14,7 +14,7 @@
     android:icon="@drawable/ic_launcher"
     android:label="@string/app_name"
     android:theme="@style/AppTheme">
-    <activity android:name=".HelloAndroidActivity">
+    <activity android:name=".SearchRepositoriesActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
