--- a/github-android/AndroidManifest.xml
+++ b/github-android/AndroidManifest.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  android:versionCode="1"
-  android:versionName="1.0-SNAPSHOT"
-  package="com.github.frankiesardo.gaagbt">
+          android:versionCode="1"
+          android:versionName="1.0-SNAPSHOT"
+          package="com.github.frankiesardo.gaagbt">
 
-  <uses-sdk
-    android:minSdkVersion="14"
-    android:targetSdkVersion="16" />
+    <uses-sdk
+            android:minSdkVersion="14"
+            android:targetSdkVersion="16"/>
 
-  <application
-    android:allowBackup="true"
-    android:debuggable="true"
-    android:icon="@drawable/ic_launcher"
-    android:label="@string/app_name"
-    android:theme="@style/AppTheme">
-    <activity android:name=".SearchRepositoriesActivity">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
+    <application
+            android:name=".framework.injection.InjectingApplication"
+            android:allowBackup="true"
+            android:debuggable="true"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+        <activity android:name=".presentation.android.ui.SearchRepositoriesActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
-  </application>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
