--- a/github-android/AndroidManifest.xml
+++ b/github-android/AndroidManifest.xml
@@ -15,11 +15,23 @@
     android:icon="@drawable/ic_launcher"
     android:label="@string/app_name"
     android:theme="@style/AppTheme">
-    <activity android:name=".presentation.android.ui.SearchRepositoriesActivity">
+
+    <meta-data
+      android:name="android.app.default_searchable"
+      android:value=".presentation.android.ui.SearchRepositoriesActivity" />
+
+    <activity
+      android:name=".presentation.android.ui.SearchRepositoriesActivity"
+      android:launchMode="singleTop">
+      <meta-data
+        android:name="android.app.searchable"
+        android:resource="@xml/searchable" />
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
         <category android:name="android.intent.category.LAUNCHER" />
+
+        <action android:name="android.intent.action.SEARCH" />
       </intent-filter>
     </activity>
   </application>
