--- a/github-android-smoke/pom.xml
+++ b/github-android-smoke/pom.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
+    <parent>
+        <groupId>com.github.frankiesardo</groupId>
+        <artifactId>github-android-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>com.github.frankiesardo</groupId>
-    <artifactId>github-android-parent</artifactId>
+    <artifactId>github-android-smoke</artifactId>
     <version>1.0-SNAPSHOT</version>
-  </parent>
+    <name>github-android-smoke - Smoke tests</name>
 
-  <groupId>com.github.frankiesardo</groupId>
-  <artifactId>github-android-smoke</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <name>github-android-smoke - Smoke tests</name>
-
-  <dependencies>
-    <dependency>
-      <groupId>com.github.frankiesardo</groupId>
-      <artifactId>github-android-core</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.github.frankiesardo</groupId>
+            <artifactId>github-android-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.easytesting</groupId>
+            <artifactId>fest-assert</artifactId>
+            <version>1.4</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
