--- a/github-android-it/AndroidManifest.xml
+++ b/github-android-it/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.github.frankiesardo.gaagbt.test"
-  android:versionCode="1"
-  android:versionName="1.0-SNAPSHOT">
+          package="com.github.frankiesardo.gaagbt.test"
+          android:versionCode="1"
+          android:versionName="1.0-SNAPSHOT">
 
-  <application
-    android:icon="@drawable/icon"
-    android:label="@string/app_name">
-    <uses-library android:name="android.test.runner" />
-  </application>
+    <application
+            android:icon="@drawable/icon"
+            android:label="@string/app_name">
+        <uses-library android:name="android.test.runner"/>
+    </application>
 
-  <instrumentation
-    android:targetPackage="com.github.frankiesardo.gaagbt"
-    android:name="android.test.InstrumentationTestRunner" />
+    <instrumentation
+            android:targetPackage="com.github.frankiesardo.gaagbt"
+            android:name="com.github.frankiesardo.gaagbt.presentation.android.ui.InjectingApplicationTestRunner"/>
 
 </manifest>
 
