Rewrite Service injection using multiple levels
This small refactoring allow us to easily swap one service for another, while keeping our IT run in mock mode.

--- a/github-android-it/AndroidManifest.xml
+++ b/github-android-it/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
   <instrumentation
     android:targetPackage="com.github.frankiesardo.gaagbt"
-    android:name="android.test.InstrumentationTestRunner" />
+    android:name="com.github.frankiesardo.gaagbt.presentation.android.ui.InjectingApplicationTestRunner" />
 
 </manifest>
 
