--- a/github-android-core/pom.xml
+++ b/github-android-core/pom.xml
@@ -41,7 +41,12 @@
       <version>0.9.1</version>
     </dependency>
     <dependency>
-      <groupId>org.mockito</groupId>
+      <groupId>com.squareup.retrofit</groupId>
+      <artifactId>retrofit</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+    <dependency>
+    <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>1.9.5</version>
       <scope>test</scope>
